# genai-video-assistant

./: Imagine for 1 Minute.srt  README.md
backend/: chat_store.py  config.py  requirements.txt  server.py
backend/agents/: base.py  generator.py  transcriber.py  vision.py
backend/proto/: assistant_pb2_grpc.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/proto/: assistant.proto  assistant_pb2.py
frontend/src-tauri/src/: main.rs
