[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
protoc-bin-vendored = "3"

[package.metadata.tauri.bundle]
identifier = "com.local.genai.videoassistant"
